# kapplier

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: kapplier.yml
deploy/: manifest.yaml
examples/: kapplier.yaml
src/: kubeclient.rs  main.rs  prometheus.rs
