[package]
name = "kapplier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
axum = "0.8.3"
clap = { version = "4.5.31", features = ["derive", "env"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", features = ["runtime", "derive"] }
lazy_static = "1.5.0"
log = "0.4.26"
prometheus = { version = "0.13.4", features = ["process"] }
serde = "1.0.218"
serde_json = "1.0.139"
serde_yaml = "0.9.33"
simple_logger = "5.0.0"
tokio = { version = "1.42.0", features = ["full"] }
walkdir = "2.5.0"
