[package]
name = "kapplier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
clap = { version = "4.5.34", features = ["derive", "env"] }
ctrlc = { version = "3.4.7", features = ["termination"] }
futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", features = ["runtime", "derive"] }
lazy_static = "1.5.0"
log = "0.4.27"
prometheus = { version = "0.14.0", features = ["process"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.33"
simple_logger = "5.0.0"
tokio = { version = "1.45.1", features = ["full"] }
walkdir = "2.5.0"
